@@ -15,6 +15,8 @@ Added save screen to bmp feature
 Added Solarized Dark & Light Gui Style
 Added Windows icon
 Added F key to toggle top cpu speed
+Added F key to pause/unpause tape
+Added setting to resample audio output to 1 bit
 
 Added ZRCP commands:
 -save-screen: to save machine screen to file
